migrations + context + register service + change in limits design

--- a/EFMigrations/appsettings.json
+++ b/EFMigrations/appsettings.json
@@ -1,6 +1,6 @@
 {
 
   "ConnectionStrings": {
-    "CardDatabase": "Server=localhost;Database=cardsdb;User Id=sa;Password=admin!@#123;"
+    "CardDatabase": "Server=localhost;Database=cardsdb;User Id=sa;Password=Test.1234;"
   }
 }
