--- a/TinyCards.Api/TinyCards.Api.csproj
+++ b/TinyCards.Api/TinyCards.Api.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TinyCards\TinyCards.Core\TinyCards.Core.csproj" />
+    <ProjectReference Include="..\TinyCards.Core\TinyCards.Core.csproj" />
   </ItemGroup>
 
 </Project>
